[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["SBarton2005 <sbarton2024@k12.andoverma.us>"]
description = ""
name = "learningpandas"
version = "0.1.0"
[tool.poetry.dependencies]
pandas = "^1.0"
python = "^3.7"
[tool.poetry.dev-dependencies]
